@@ -31,8 +31,10 @@ import uk.gov.hmcts.reform.civil.model.genapplication.GARespondentDebtorOfferGAs
 import uk.gov.hmcts.reform.civil.model.genapplication.GARespondentResponse;
 import uk.gov.hmcts.reform.civil.model.genapplication.GAUnavailabilityDates;
 import uk.gov.hmcts.reform.civil.service.CoreCaseDataService;
+import uk.gov.hmcts.reform.civil.service.GaForLipService;
 import uk.gov.hmcts.reform.civil.service.GeneralAppLocationRefDataService;
 import uk.gov.hmcts.reform.civil.utils.DocUploadUtils;
+import uk.gov.hmcts.reform.civil.utils.JudicialDecisionNotificationUtil;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 
@@ -58,6 +60,7 @@ import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.MID;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESPOND_TO_APPLICATION;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESPOND_TO_APPLICATION_URGENT_LIP;
 import static uk.gov.hmcts.reform.civil.enums.GADebtorPaymentPlanGAspec.PAYFULL;
 import static uk.gov.hmcts.reform.civil.enums.GARespondentDebtorOfferOptionsGAspec.ACCEPT;
 import static uk.gov.hmcts.reform.civil.enums.GARespondentDebtorOfferOptionsGAspec.DECLINE;
@@ -76,6 +79,7 @@ public class RespondToApplicationHandler extends CallbackHandler {
     private final IdamClient idamClient;
     private final GeneralAppLocationRefDataService locationRefDataService;
     private final CoreCaseDataService coreCaseDataService;
+    private final GaForLipService gaForLipService;
 
     private static final String RESPONSE_MESSAGE = "# You have provided the requested information";
     private static final String JUDGES_REVIEW_MESSAGE =
@@ -102,7 +106,8 @@ public class RespondToApplicationHandler extends CallbackHandler {
         "The date entered cannot be in the past.";
 
     public static final String PREFERRED_TYPE_IN_PERSON = "IN_PERSON";
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(RESPOND_TO_APPLICATION);
+    private static final List<CaseEvent> EVENTS =
+        List.of(RESPOND_TO_APPLICATION, RESPOND_TO_APPLICATION_URGENT_LIP);
 
     @Override
     protected Map<String, Callback> callbacks() {
@@ -180,10 +185,11 @@ public class RespondToApplicationHandler extends CallbackHandler {
         UserInfo userInfo = idamClient.getUserInfo(callbackParams.getParams().get(BEARER_TOKEN).toString());
 
         List<Element<GARespondentResponse>> respondentResponse = caseData.getRespondentsResponses();
-
+        boolean isNotAllowedForLip =
+            gaForLipService.isLipResp(caseData) && JudicialDecisionNotificationUtil.isUrgent(caseData);
         List<String> errors = new ArrayList<>();
         if (caseData.getCcdState() == CaseState
-            .APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION
+            .APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION && !isNotAllowedForLip
         ) {
             errors.add(APPLICATION_RESPONSE_PRESENT);
         }
@@ -364,8 +370,10 @@ public class RespondToApplicationHandler extends CallbackHandler {
                                        CaseData civilCaseData, CaseData gaCaseData) {
 
         // civil claim claimant
-        if (!gaCaseData.getParentClaimantIsApplicant().equals(YES)
-            && userInfo.getSub().equals(civilCaseData.getApplicantSolicitor1UserDetails().getEmail())) {
+        if (!gaCaseData.getParentClaimantIsApplicant().equals(YES) &&
+            (Objects.nonNull(civilCaseData.getApplicantSolicitor1UserDetails())
+                && userInfo.getSub().equals(civilCaseData.getApplicantSolicitor1UserDetails().getEmail()) ||
+                gaForLipService.isLipResp(gaCaseData))) {
 
             log.info("Return Civil Claim Defendant two party Name if GA Solicitor Email ID "
                          + "as same as Civil Claim Claimant Solicitor Two Email");
